# cautious-computing-machine

./: .gitmodules  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: common.py  db.py  main.py
app/models/: __init__.py  feature_toggle.py  prediction.py
app/routes/: __init__.py  predictions.py
migrations/: README  env.py
migrations/versions/: 99f8c1ca829d_add_status_to_prediction.py  a8dc38536b15_init.py  adc3e87d1ae1_add_prediction.py
scripts/: create_migration.sh  psql.sh  test.sh
tests/: test_core.py  testutils.py
