[tool.poetry]
name = "runtime-ff"
version = "0.1.0"
description = ""
authors = ["Johannes <johannes.ronning@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.100.0"
asyncpg = "0.28.0"
sqlmodel = "0.0.8"
uvicorn = "0.22.0"
alembic = "1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
